--- a/.github/workflows/tsharp-ci.yml
+++ b/.github/workflows/tsharp-ci.yml
@@ -16,8 +16,8 @@ jobs:
     - name: make install
       run: sudo make install
     - name: prepare
-      run: echo "func main() do \nprint("Hello World");\nend;" > sample.t#
+      run: git clone https://github.com/ibukiyoshidaa/Tsharp; mv Tsharp/sample/main.t# sample.t#
     - name: run
       run: t# sample.t#
     - name: clean
-      run: sudo make clean; rm sample.t#
+      run: sudo make clean; rm -rf sample.t# Tsharp
