--- a/.github/workflows/tsharp-ci.yml
+++ b/.github/workflows/tsharp-ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: make install
       run: sudo make install
     - name: prepare
-      run: git clone https://github.com/ibukiyoshidaa/Tsharp.git | ls | mv tsharp/sample/main.t# sample.t#
+      run: echo 'func main() do\nprint("Hello World");\nend;' > sample.t#
     - name: run
       run: t# sample.t#
     - name: clean
