--- a/.github/workflows/tsharp-ci.yml
+++ b/.github/workflows/tsharp-ci.yml
@@ -23,8 +23,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
+    - shell: bash
       run: make
     - name: run
+    - shell: bash
       run: t#.exe test\ci-test.t#
     - name: clean
+    - shell: bash
       run: make clean
